# fastapi

./: README.md  main.py  pyproject.toml
modules/: __init__.py  module_01.py  module_02.py  module_03.py  module_04.py
